Fixing nits: adding full view delete & creating in SQL update, changing "on_vacation" to "is_on_vacation" everywhere for Boolean happiness, removing stray ">0" and adding extra spaces. Phew!

--- a/src/ui/gui.css
+++ b/src/ui/gui.css
@@ -454,8 +454,6 @@ table.activePlayerList th.idleness {
 }
 
 .playerFlag {
-   font-weight: bold;
-	   font-style: italic;*/
    cursor: default;
    vertical-align: middle;
    margin: 0px 3px;
